[package]
name = "grainsquery"
version = "0.1.2"
authors = ["Alexander Thaller <alexander.thaller@trivago.com>"]
build = "build.rs"

[lib]
name = "host"
path = "src/host.rs"

[dependencies]
serde = "*"
serde_yaml = "0.4.1"
serde_json = "*"
glob = "*"
log = "*"
loggerv = "*"
env_logger = "*"
regex = "*"
time = "*"

[dependencies.clap]
version = ""
features = ["yaml"]

[build-dependencies]
serde_codegen = "*"

[build-dependencies.clap]
version = "*"
features = ["yaml"]
