[package]
name = "grainsquery"
version = "1.0.0"
authors = ["Alexander Thaller <alexander.thaller@trivago.com>"]

[lib]
name = "host"
path = "src/host.rs"

[dependencies]
env_logger = "0.4"
glob = "0.2"
log = "0.3"
loggerv = "0.2"
regex = "0.2"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
time = "0.1"
csv = "0.15"

[dependencies.clap]
version = "2"
features = ["yaml"]
